--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -13,6 +13,12 @@ ul > li > .navlink > img {
 ul > li {
   list-style-type: none;
 }
+.nav-ul{
+  /* background-color: rgb(37, 37, 37); */
+  /* background-color: rgb(5, 0, 39); */
+  margin: -10px;
+  padding: 5px;
+}
 
 /* ul {
   display: flex;
