--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -14,7 +14,7 @@ ul > li {
   list-style-type: none;
 }
 .nav-ul{
-  /* background-color: rgb(37, 37, 37); */
+  background-color: rgb(37, 37, 37);
   /* background-color: rgb(5, 0, 39); */
   margin: -10px;
   padding: 5px;
