--- a/react-app/src/components/LandingPage/Landingpage.css
+++ b/react-app/src/components/LandingPage/Landingpage.css
@@ -2,3 +2,9 @@
     display:flex;
     flex-direction: column;
 }
+
+.landingPageSignUpContainer {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
