--- a/react-app/src/components/SignupFormPage/SignupForm.css
+++ b/react-app/src/components/SignupFormPage/SignupForm.css
@@ -15,31 +15,18 @@ form {
     width: 500px;
     height: 500px;
 }
-.wholeFormContainer {
-    background-color: rgb(36, 35, 35);
-    border-radius: 10px;
-    width: 600px;
-    height: 600px;
 
-}
 /* form > h1 {
     padding-bottom: -40px;
 } */
-.landingPageLoginContainer {
-    text-align: center;
-}
 
 
 form > button {
-    width: 300px;
-    background-color: rgb(36, 35, 35);
-    color: #f47521;
-}
-
-.landingPageLoginContainer > button {
-    width: 300px;
-    background-color: rgb(36, 35, 35);
-    color: #f47521;
+    width: 170px;
+    height: 40px;
+    background-color: #f47521;
+    color: black;
+    border: none;
 }
 
 label {
@@ -50,8 +37,8 @@ label {
 }
 
 input {
-    background-color: rgb(36, 35, 35);
-    border:rgb(36, 35, 35) solid 2px;
+    background-color: #141519;
+    border:#141519 solid 2px;
     border-bottom: gray solid 2px;
     height: 40px;
     width: 300px;
