--- a/react-app/src/components/HomePage/index.css
+++ b/react-app/src/components/HomePage/index.css
@@ -1,6 +1,11 @@
+.homePageDiv{
+display:flex;
+flex-direction: column;
+}
 .tileCoverPhotoHomePage{
 
-   max-width:250px
+   width:100%;
+   max-height: 300px;
 }
 .allAnimeContainer{
    border-top:5px #F47521 solid;
@@ -10,12 +15,35 @@
    flex-wrap:wrap;
    justify-content: space-between;
    border-bottom:5px #F47521 solid;
+   padding:5px;
+   width:80%;
+   align-self: center;
 }
 
 .animeTileHomePage{
-   width: 300px;
-   flex-wrap:wrap
+   width: 250px;
+   flex-wrap:wrap;
+   margin-top: 10px;
+   position: relative;
 }
+
+.animeTileHomePage .hover-div{
+   visibility: hidden;
+   text-align: center;
+   background-color: black;
+   position: absolute;
+   /* z-index: 1; */
+   text-overflow: ellipsis;
+   overflow: hidden;
+   bottom: 5px;
+   height: 310px;
+   }
+
+.animeTileHomePage:hover .hover-div{
+   visibility: visible;
+   opacity: 0.8;
+}
+
 
 .animeShowName>h2{
 margin-top: 14px;
