--- a/react-app/src/components/Footer/footer.css
+++ b/react-app/src/components/Footer/footer.css
@@ -26,8 +26,8 @@
     display:flex;
 }
 
-/* .allFooterContainer {
+.allFooterContainer {
     position: relative;
     bottom: 0;
     width: 100%;
-} */
+}
