--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -25,20 +25,18 @@ body{
   } */
   :root {
     --gradient: linear-gradient(130deg, #060606, rgb(4, 0, 28), #200101);
-
+    margin: 0;
+    height: fit-content;
   }
 
   body{
     font-family: basic-sans, sans-serif;
     color:white;
     background-image: var(--gradient);
-    margin:0;
+    margin: 0;
   }
 
-  /* html, body {
-    position:fixed;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-} */
+  html {
+    position: relative;
+    margin: 0;
+}
