--- a/react-app/src/components/AnimeForm/animeForm.css
+++ b/react-app/src/components/AnimeForm/animeForm.css
@@ -7,6 +7,7 @@ width: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* height:max-content */
 }
 
 form {
@@ -19,4 +20,8 @@ form {
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+
+input[accept='image/*'] {
+    
 }
