--- a/react-app/src/components/CreateReview/index.css
+++ b/react-app/src/components/CreateReview/index.css
@@ -1,3 +1,13 @@
 .createReviewHeader{
 align-self:center;
 }
+
+.submitButtonReview {
+    background-color: #f47521;
+    height: 50px;
+    color: black;
+    font-size: 20px;
+    border: none;
+    margin: 10px;
+    cursor: pointer;
+}
