--- a/react-app/src/components/EditReview/index.css
+++ b/react-app/src/components/EditReview/index.css
@@ -1,8 +1,26 @@
 .ratingDiv{
+    padding-top: 10px;
     display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
 }
 
-.sushis{
+.dragonballs{
     width:75px;
+    /* background-color: orange; */
+    border-radius: 100%;
+    border: black 2px solid;
+    box-shadow: inset 0 0 0 2px black;
+    margin-left: 2px;
+    margin-right: 2px;
+}
 
+.filled{
+    background-color: orange;
+    border-radius: 100%;
+}
+
+.empty{
+    background-color: white;
 }
