--- a/react-app/src/components/EditReview/index.css
+++ b/react-app/src/components/EditReview/index.css
@@ -14,13 +14,16 @@
     box-shadow: inset 0 0 0 2px black;
     margin-left: 2px;
     margin-right: 2px;
+    cursor: pointer;
 }
 
 .filled{
     background-color: orange;
     border-radius: 100%;
+    
 }
 
 .empty{
     background-color: white;
+    
 }
