--- a/react-app/src/components/EpisodeComponent/index.css
+++ b/react-app/src/components/EpisodeComponent/index.css
@@ -1,22 +1,32 @@
-.videoplayerandDescription{
+/* .videoplayerandDescription{
+    margin:10px;
     display:flex;
     width : 100%;
     justify-content: center;
-}
+} */
 .episodeComponentDiv{
     width:100%;
     display:inline-flex;
-    flex-direction:column;
     align-self: center;
+    justify-content: center;
 }
 
 .descriptionDivEpisode
 {
     align-self: center;
     display:inline-block;
-    width: 40%;
-    margin:50px;
+    width: 80%;
 }
 .headerandDescription{
-    width:40%;
+    width:650px;
+    margin-left:19px;
+    margin-top:0px
+}
+
+.headerandDescription>h2{
+    font-size: 30px;
+    margin-top: 10px;
+}
+.videoplayerandDescription{
+    display:flex;
 }
