--- a/react-app/src/components/Favorite/index.css
+++ b/react-app/src/components/Favorite/index.css
@@ -1,13 +1,15 @@
 .favoritesMapDiv{
 display:flex;
-justify-content: center;
+justify-content: flex-start;
+/* margin: 5px 40px; */
 
 }
 
 .favoritesDiv{
     border-top: 5px #F47521 solid;
     margin-top:4px;
-    width:95%;
+    width:80%;
+    padding:5px;
     align-self: center;
 }
 .favoritesDiv>h1{
