--- a/react-app/src/components/AnimeDetail/animeDetail.css
+++ b/react-app/src/components/AnimeDetail/animeDetail.css
@@ -154,26 +154,112 @@
 
 .delete-episode-button > div{
     background-color: #f47521;
-    height: 30px;
+    height: 25px;
     font-weight: 700;
     width: 200px;
     color: black;
     font-size: 20px;
     border: none;
     margin: 10px;
+    border-radius: 10px;
     cursor: pointer;
     text-align: center;
 }
 
-.episodeCoverImageDiv{
+/* .episodeCoverImageDiv{
     width:100%;
 }
 .episodeCoverImage{
    width:100%;
    border-radius: 6px;
-   object-fit: cover;
+   /* object-fit: cover;
+} */
+
+.singleEpisodeDiv{
+    margin: 20px;
+    width: 250px;
+    height: 240px;
+    margin-top: 10px;
+    position: relative;
+    border-radius: 6px;
+    align-self: flex-start;
+
+
+ }
+
+ .singleEpisodeDiv .episodePanelHover{
+    visibility: hidden;
+    /* text-align: center; */
+    width: 100%;
+    background-color: #23252b;
+    position: absolute;
+    /* z-index: 1; */
+    text-overflow: ellipsis;
+    overflow: hidden;
+    bottom: 0px;
+    height: 240px;
+    padding: 5px;
+    border-radius: 6px;
+    }
+
+ .singleEpisodeDiv:hover .episodePanelHover{
+    visibility: visible;
+    /* opacity: 0.9; */
+    cursor:pointer;
+ }
+
+ .episodeWatchNow {
+    height: 240px;
+ }
+
+ .episodeCoverImageDiv > img{
+    width:100%;
+    height: 175px;
 }
 
-.episodeDescription{
-    font-size:14px;
+.showTitleHover {
+    font-size: 12px;
+    color: lightgray;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.episodeTitleHover {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 3px;
+}
+
+.episodeDateHover {
+    font-size: 12px;
+    color: lightgray;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.episodeDescriptionHover {
+    font-size: 16px;
+}
+
+/* .episodeTileShow,
+.episodeTileTitle {
+    text-decoration: none;
+} */
+
+.episodeWatchNow > a {
+    text-decoration: none;
+}
+
+.episodeTileShow {
+    font-size: 12px;
+    color: lightgray;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.episodeTileTitle {
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    margin-bottom: 3px;
 }
