--- a/react-app/src/components/AnimeDetail/animeDetail.css
+++ b/react-app/src/components/AnimeDetail/animeDetail.css
@@ -202,6 +202,7 @@
     height: 240px;
     padding: 5px;
     border-radius: 6px;
+    overflow-y: scroll;
     }
 
  .singleEpisodeDiv:hover .episodePanelHover{
@@ -217,6 +218,7 @@
  .episodeCoverImageDiv > img{
     width:100%;
     height: 175px;
+    object-fit: cover;
 }
 
 .showTitleHover {
