--- a/react-app/src/components/HomePage/index.css
+++ b/react-app/src/components/HomePage/index.css
@@ -46,9 +46,11 @@ flex-direction: column;
    /* z-index: 1; */
    text-overflow: ellipsis;
    overflow: hidden;
-   bottom: 5px;
+   bottom: 0;
    height: 310px;
    border-radius: 6px;
+   width: 100%;
+   overflow-y: scroll;
    }
 
 .animeTileHomePage:hover .hover-div{
