--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -16,13 +16,15 @@ ul>li {
   position: fixed;
   top: 0;
   width: 100%;
+  max-width: 1424px;
   z-index: 999;
-  margin: 0px 0px;
+  margin: 0 auto;
   padding: 0px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color:#23252b;
+  /* left: 15%; */
 }
 
 .profile-dropdown {
@@ -46,7 +48,7 @@ ul>li {
   justify-content: space-around;
   align-items: center;
   /* margin-right: 50px; */
-  padding: 0 20px;
+  /* padding: 0 20px; */
 }
 
 .button-with-arrow:hover {
@@ -143,7 +145,7 @@ ul>li {
 }
 
 a.navlink{
-  margin-left: 50px;
+  /* margin-left: 50px; */
 }
 
 .profile-dropdown li{
@@ -151,5 +153,13 @@ a.navlink{
 }
 
 .navbar-max-width{
-  max-width: 1400px;
+  width: 100%;
+  height: 70px;
+  background-color:#23252b;
+  position: fixed;
+  top: 0;
+  z-index: 998;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
 }
