--- a/react-app/src/components/Footer/footer.css
+++ b/react-app/src/components/Footer/footer.css
@@ -2,7 +2,7 @@
 .githubLogo {
     width: 15px;
     margin: 5px;
-    padding-top:9px;
+    padding-top:3px;
 }
 
 .allColumns {
@@ -85,3 +85,11 @@
     /* padding: 8px; */
     padding-bottom: 8px;
 }
+.footerNameBlock {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+/* .footerNameBlock > a {
+    height: 15px;
+} */
