remove css gradient

--- a/react-app/src/components/HomePage/index.css
+++ b/react-app/src/components/HomePage/index.css
@@ -97,7 +97,7 @@ margin-top: 14px;
    
 }
 
-.backGroundGradient{
+/* .backGroundGradient{
    background-color: #2abdbb;
    background-image: linear-gradient(to var(--cr-end-direction),#f47521,#fab818);
-}
+} */
