--- a/react-app/src/components/Favorite/index.css
+++ b/react-app/src/components/Favorite/index.css
@@ -6,7 +6,7 @@ justify-content: flex-start;
 }
 
 .favoritesDiv{
-    border-top: 5px #F47521 solid;
+    /* border-top: 5px #F47521 solid; */
     margin-top:4px;
     width:100%;
     padding:5px;
@@ -14,7 +14,7 @@ justify-content: flex-start;
     max-width: 1306px;
 }
 .favoritesDiv>h1{
-margin-left:50px;
+/* margin-left:50px; */
 }
 .animeTileHomePage{
 
