console logs removed, nav links changed to full button width

--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -97,6 +97,7 @@ ul>li {
   /* padding: 20px 0px; */
   /* border-bottom: solid 1px darkgray; */
   color: #d3d3d3;
+  cursor: pointer;
 }
 .navlink-list:hover {
   /* padding: 20px 0px; */
