added link to carousel

--- a/react-app/src/components/AnimeDetail/animeDetail.css
+++ b/react-app/src/components/AnimeDetail/animeDetail.css
@@ -142,6 +142,7 @@
     background-color: #f47521;
     height: 30px;
     width: 170px;
+    padding: 10px;
     color: black;
     font-size: 20px;
     border: none;
